<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionFragment">

    <EditText
        android:id="@+id/price"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/text_price_1"
        android:layout_marginStart="20dp"
        android:layout_marginVertical="20dp"/>

    <EditText
        android:id="@+id/wlsPrice"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/text_priceWls"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"
        android:layout_marginVertical="20dp"/>

    <EditText
        android:id="@+id/amount"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/text_amount_1"
        android:layout_below="@id/price"
        android:layout_marginStart="20dp"/>

    <EditText
        android:id="@+id/code"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/text_code"
        android:layout_below="@id/wlsPrice"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/text_name"
        android:layout_below="@id/amount"
        android:layout_marginStart="20dp"
        android:layout_marginVertical="20dp"/>

    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/btn_add"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>

