<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListFragment">

    <LinearLayout
        android:paddingHorizontal="20dp"
        android:id="@+id/topLine"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:background="@color/black">

        <TextView
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:text="@string/text_name"
            android:textSize="30dp"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/text_price_2"
            android:textSize="30dp"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:text="@string/text_amount_2"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:layout_marginLeft="80dp"/>

    </LinearLayout>

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/topLine"/>

</RelativeLayout>